downコマンドを追加

--- a/book_admin/Makefile
+++ b/book_admin/Makefile
@@ -6,6 +6,8 @@ build:
 	docker compose build
 up:
 	docker compose up -d
+down:
+	docker compose down
 login:
 	docker compose exec web bash
 prune:
