--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -1,9 +1,11 @@
-version: '3.9'
+version: "3.9"
 services:
   db:
     image: postgres
     volumes:
       - ./src/tmp/db:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: password
   web:
